# ostler

./: .lintstagedrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yaml  ci.yaml  macos.yaml  main.yaml  windows.yaml
.husky/: pre-commit
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/client/: api_helper.rs  client_manager.rs  kubeconfig_key.rs  mod.rs
src-tauri/src/domain/future/: future_manager.rs
src-tauri/src/domain/portforward/: mod.rs  portforward_manager.rs
src-tauri/src/domain/resources/: context.rs  deployment.rs  mod.rs  namespace.rs  pod.rs  portforward.rs
src-tauri/src/domain/resources/contexts/: commands.rs
src-tauri/src/domain/resources/deployments/: commands.rs
src-tauri/src/domain/resources/namespaces/: commands.rs
src-tauri/src/domain/resources/portforward/: commands.rs
src-tauri/src/infrastructure/: app.rs  error.rs  response.rs
src/components/header/: header.tsx
src/components/header/context-picker/: context-picker.tsx
src/components/layout/: layout.tsx
src/components/layout/namespace-picker/: index.ts
src/components/resources/deployment/: deployment.tsx
src/components/resources/pod/: pod.tsx
src/components/resources/pod-list/: index.ts
src/components/shared/terminal/: index.ts  terminal.interface.ts  terminal.tsx
src/components/sidebar/: sidebar.tsx
src/components/sidebar/cluster-picker/: cluster-picker.tsx
src/components/sidebar/context-picker/: context-picker.tsx  index.ts
src/components/workload/deployment-list/: index.ts  (+1 more)
src/core/: invoker.ts
src/pages/: deployment.page.tsx  pod.page.tsx
src/pages/deployment/: deployment.tsx  index.ts
src/pages/namespace/: index.ts  namespace.tsx
src/pages/pod/: index.ts  pod.tsx
src/services/: constant.ts  context.ts  deployment.ts  future.ts  index.ts  namespace.ts  pod.ts  portforward.ts
src/stores/: index.ts  use-kube-context.ts  use-kube.ts  use-portforward.ts
(+33 files in other folders)
