[package]
name = "ostler"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
kube = { version = "0.95.0", features = ["kube-runtime", "kube-derive", "ws"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = "1.40.0"
dashmap = "6.1.0"
home = "0.5.9"





[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
