[package]
name = "ostler"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ostler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
kube = { version = "0.95.0", features = ["kube-runtime", "kube-derive", "ws"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
thiserror = "1.0.63"
tokio = "1.40.0"
dashmap = "6.1.0"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"




[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
